[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = {version="0.9"}
winit = "0.29"
rand = "0.8.5"
assets_manager = { version = "0.11", features = ["png", "hot-reloading", "embedded"] }
