[package]
name = "goldminer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = {version="0.9"}
engine = {path="../engine"}
winit = "0.29"
wgpu = "0.19"
assets_manager = { version = "0.11", features = ["png", "hot-reloading", "embedded"] }

